# ommo_sdk_external

./: CMakeLists.txt  README.md
include/: basestation_data_storage.h  client_context.h  client_manager.h  data_manager.h  device_data_storage.h  logger_base.h  protobuf_converters.h  rpcClientCallData.h  rpcOpenDataFrameStreamClientCallData.h  rpcOpenTrackingDeviceDataStreamClientCallData.h  rpcOpenTrackingDevicesEventStreamClientCallData.h  rpc_base_station_data_stream_client_call_data.h  rpc_reference_device_state_stream_client_read_reactor.h  rpc_tracking_devices_event_stream_client_read_reactor.h  rpc_tracking_group_data_stream_client_call_data.h  rpc_tracking_groups_event_stream_client_call_data.h  rpc_wireless_management_stream_client_bidi_reactor.h  rpc_wireless_management_stream_client_call_data.h  rwlock.h  sdk_types.h  sdk_utils.h  spdlog_logger.h  std_out_logger.h  wireless_manager.h  wireless_manager_wrapper.h
protobuf/: ommo_service_api.proto
src/: basestation_data_storage.cpp  client_context.cpp  client_context_impl.h  client_manager.cpp  data_manager.cpp  device_data_storage.cpp  protobuf_converters.cpp  rpcClientCallData.cpp  rpcOpenDataFrameStreamClientCallData.cpp  rpcOpenTrackingDeviceDataStreamClientCallData.cpp  rpcOpenTrackingDevicesEventStreamClientCallData.cpp  rpc_base_station_data_stream_client_call_data.cpp  rpc_reference_device_state_stream_client_read_reactor.cpp  rpc_tracking_devices_event_stream_client_read_reactor.cpp  rpc_tracking_group_data_stream_client_call_data.cpp  rpc_tracking_groups_event_stream_client_call_data.cpp  rpc_wireless_management_stream_client_bidi_reactor.cpp  rpc_wireless_management_stream_client_call_data.cpp  sdk_types.cpp  sdk_utils.cpp  spdlog_logger.cpp  std_out_logger.cpp  wireless_manager.cpp  wireless_manager_impl.h  wireless_manager_wrapper.cpp
